# diving

./: .gitignore  .jasmine.mjs  .mypy.ini  .pylintrc  CLAUDE.md  LICENSE  Makefile  cache-check.sh  cache-prefetch.sh  cli.py  collection.py  detective.py  duplicates.py  gallery.py  game.js  hypertext.py  image.py  imprecise.py  information.py  locations.py  macos.sh  missing.py  plotter.py  pyproject.toml  requirements.txt  runner.sh  sanity_test.py  search.py  static.py  style.css  taxonomy.py  test_integration.sh  test_sanity.py  timeline.py  todo.md  utility.py
data/: db.json  names.html  static.yml  taxonomy.txt  taxonomy.yml  translate-3.yml  translate-4.yml  translate.yml  translations.yml
detective/: data.js  game.js  index.html
diving/: detective.py  gallery.py  generate.py  hypertext.py  imprecise.py  information.py  locations.py  macos.sh  missing.py  search.py  stats.py  timeline.py
test/: conftest.py  integration.sh  test_collection.py  test_gallery.py  test_grammar.py  test_hypertext.py  test_image.py  test_information.py  test_locations.py  test_log.py  test_main.py  test_resource.py  test_similarity.py  test_static.py  test_stats.py  test_taxonomy.py  test_translator.py  test_uddf.py  test_utility.py  test_verify.py
util/: cache-check.sh  cache-prefetch.sh  collection.py  common.py  database.py  grammar.py  image.py  log.py  macos.sh  metrics.py  plotting.py  prompt.txt  resource.py  runner.sh  similarity.py  sitemap.awk  sitemap.py  static.py  taxonomy.py  thumbnails.py  translator.py  uddf.py  verify.py
web/: game.js  game.spec.js  index.html  (+8 more)
(+18 files in other folders)
