[project]
name = "diving"
version = "0.1.0"
description = "Static site generator for scuba diving photography galleries"
readme = "CLAUDE.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "wikipedia",
    "inflect",
    "apocrypha",
    "pyyaml",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "types-PyYaml",
    "mypy",
    "ruff",
]

[project.scripts]
diving = "cli:main"

[tool.setuptools.packages.find]
include = ["diving*"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
disallow_untyped_defs = true
disallow_untyped_globals = true
warn_unreachable = true
warn_redundant_casts = true
pretty = true

[[tool.mypy.overrides]]
module = "apocrypha.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wikipedia.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true
